syntax = "proto3";

package test.integration.databricks_sql_proxy;

message SyncWriteFilterConfig {
}
